2008-01-17  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_initialize):
	enable key repeat mode

	* akfavatar.h, avatar.c (avt_clear_bol, avt_clear_line):
	(avt_clear_up, avt_clear_down):
	new functions

	* avatar.c (avt_put_character):
	interprets cariage return

	* akfavatar.h, avatar.c (avt_put_character, avt_mb_encode):
	new functions

	* avatarsay.c:
	ability to run lineoriented programs (not for Windows)
	program has a main menu now
	code cleanups and reorganizations
	fix: rawmode (fixes bug #21889)
	(checkoptions): sanity checks
	(execute_process): no blocking, while program outputs nothing

	* akfavatar.h:
	renamed macros to always use the AVT_ prefix
	new type avt_boolean_t

	* avatar.c (avt_init_SDL):
	new function

	* avatar.c:
	more runtime checks

	* akfavatar.h, avatar.c (avt_set_background_color):
	can be called after initialisation

	* akfavatar.h, avatar.c (avt_initialized):
	new function

	* avatar.c (avt_wait_button, avt_wait_key):
	show mouse pointer while waiting for a key (or mouse button)	

        * avatar.c (avt_quit)
          avatar-audio.c (avt_initialize_audio, avt_quit_audio):
        avt_quit automatically calls avt_quit_audio if appropriete          

	* avatar.c (avt_analyze_event):
	Ctrl + Q also sets AVATARQUIT event

	* avatar.c (avt_mb_encoding):
	get internal WCHAR_ENCODING purely from preprocessor definitions

	* akfavatar.h:
	remove keyword "extern" from prototypes (just a cosmetic change)

	* akfavatar.h, avatar.c (avt_switch_mode):
	new function

	* avatar.c (avt_toggle_fullscreen):
	set avt_mode

	* akfavatar.h, avatar.c (avt_wait_button):
	new function

	* akfavatar.h, avatar.c (avt_wait_key):
	fix: deleting message

	* akfavatar.h, avatar.c (avt_get_key):
	new function

2007-12-07  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.5 released
	
	* image human-peasant.bmp removed

	* C++ comaptibility improvements
	(wint_t is used again)

	* akfavatar.h, avatar.c (avt_register_keyhandler):